[package]
name = "pingora_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
pingora = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
